--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   </head>
   <body>
     <div id="container"></div>
-    <script src="./dist/main.js?612bf9b286c4dd513b91"></script>
+    <script src="./dist/main.1d34298650608208075c.js"></script>
   </body>
 </html>
